# wot-registry

./: .dockerignore  .env.example  .gitignore  LICENSE  docker-compose.override.yaml  docker-compose.yaml
backend/: pyproject.toml
backend/src/wot_registry/: __init__.py  app.py  bootstrap.py  config.py  database.py  lifecycle.py  main.py  mcp_server.py  stream_runtime.py  td-schema.json  validation.py  wot_runtime_client.py
backend/src/wot_registry/api_keys/: __init__.py  service.py  store.py
backend/src/wot_registry/auth/: __init__.py  dependencies.py  models.py  providers.py
backend/src/wot_registry/content_store/: __init__.py  cleanup.py  service.py  store.py
backend/src/wot_registry/credentials/: __init__.py  service.py  store.py
backend/src/wot_registry/models/: __init__.py  api_keys.py  credentials.py  outbox.py  things.py
backend/src/wot_registry/routers/: __init__.py  api_keys.py  content.py  credentials.py  health.py  me.py  search.py  things.py  wot_operations.py
backend/src/wot_registry/search/: __init__.py  service.py
backend/src/wot_registry/search_indexer/: chunking.py  consumer.py  embeddings.py  main.py  metadata.py  prompting.py  runtime.py  service.py  store.py  (+2 more)
backend/tests/: conftest.py  test_api_keys.py  test_auth.py  test_config.py  test_content_store.py  test_credentials.py  test_events.py  test_main.py  test_mcp.py  test_search.py  test_search_indexer_chunking.py  test_search_indexer_metadata.py  test_search_indexer_runtime.py  test_search_indexer_store.py  test_search_indexer_stream_utils.py  test_search_indexer_summary_utils.py
(+42 files in other folders)
