[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wot_registry"
version = "0.1.0"
description = "WoT Registry registry"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.128.0",
    "fastmcp<3",
    "jsonschema==4.25.1",
    "chromadb>=1.5,<2",
    "langchain-core>=1.0,<2",
    "langchain-chroma>=1.1,<2",
    "openai>=2.29,<3",
    "psycopg[binary,pool]",
    "redis==6.4.0",
    "sqlalchemy==2.0.43",
    "uvicorn[standard]==0.37.0",
    "python-multipart",
    "aiohttp",
    "python-dotenv",
]

[project.optional-dependencies]
test = [
    "pytest>=8,<9",
    "httpx>=0.27,<1",
    "anyio>=4,<5",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
wot_registry = ["td-schema.json"]

[tool.setuptools.packages.find]
where = ["src"]
